# absolufy-imports

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  Makefile  README.md  abs_imports.py  absolufy_imports.py  requirements-dev.txt  setup.cfg  tox.ini
.github/workflows/: tox.yml
package/n2/: n2_module.py
package/n2/n3/: n3_module.py
tests/: application_directories_test.py  depth_test.py  keep_locals_relative_test.py  keep_source_format_test.py  keep_submodules_relative_test.py  main_test.py  no_space_before_import_test.py  only_relative_test.py  package_for_conversion_test.py
tests/data/: baf.py  bar.py  baz.py  bom.py  depth.py  non_utf8.py
tests/data/library1/: foo.py
tests/data/library1/subdirectory/: bar.py  bar_fixed.py
tests/data/package/n2/: n2_module.py
tests/data/package/n2/n3/: n3_module.py
