[metadata]
name = absolufy_imports
version = 0.3.1
description = A tool to automatically replace relative imports with absolute ones.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MarcoGorelli/absolufy-imports
author = Marco Gorelli
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = absolufy_imports
python_requires = >=3.8

[options.entry_points]
console_scripts =
    absolufy-imports = absolufy_imports:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
